# algotime

./: .gitignore  .zshrc  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
blog/: admin.py  context_processors.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/static/blog/: manifest.webmanifest
blog/static/blog/css/: articles.css  comments.css  custom.css  main.css  markdown.css
blog/static/blog/js/: comments.js  main.js  sw.js
blog/templates/blog/: article_detail.html  base.html  category.html  comment_item.html  index.html  search.html  tag.html
blog/templates/blog/partials/: category_sidebar.html  messages.html  pagination.html
blog/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  signup.html
config/: urls.py
config/settings/: base.py  dev.py  production.py  test.py
requirements/: base.txt  dev.txt  production.txt
scripts/: setup_env.sh
